@@ -1,0 +1,43 @@
+/* -*- mode: C -*-  */
+/* 
+   IGraph library.
+   Copyright (C) 2007  Gabor Csardi <csardi@rmki.kfki.hu>
+   MTA RMKI, Konkoly-Thege Miklos st. 29-33, Budapest 1121, Hungary
+   
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version.
+   
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+   
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 
+   02110-1301 USA
+
+*/
+
+#include "igraph.h"
+
+int igraph_finite(igraph_real_t x)
+{
+#ifdef isfinite 
+    return isfinite(x);
+#elif HAVE_ISFINITE
+    return isfinite(x);
+#elif HAVE_FINITE
+    return finite(x);
+#else
+/* neither finite nor isfinite work. Do we really need the AIX exception? */
+# ifdef _AIX
+#  include <fp.h>
+     return FINITE(x);
+# else
+    return (!isnan(x) & (x != IGRAPH_POSINFINITY) & (x != IGRAPH_NEGINFINITY));
+# endif
+#endif
+}
